--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -1,36 +1,9 @@
-@tailwind base;
+@import 'tailwindcss/base';
 
-html {
-  line-height: 1.15;
-}
+@import 'custom-base';
 
-h1,
-h2 {
-  @apply font-bold
-}
+@import 'tailwindcss/components';
 
-h2 {
-  @apply text-2xl
-}
+@import 'custom-components';
 
-@tailwind components;
-
-.btn {
-  @apply text-sm font-thin antialiased text-white px-4 py-3 no-underline rounded mx-1 bg-blue-300;
-
-  &:hover,
-  &:focus {
-    @apply bg-blue-400
-  }
-}
-
-.btn.is-secondary {
-  @apply bg-gray-500;
-
-  &:hover,
-  &:focus {
-    @apply bg-gray-600
-  }
-}
-
-@tailwind utilities;
+@import 'tailwindcss/utilities';
