--- a/src/assets/css/components/button.css
+++ b/src/assets/css/components/button.css
@@ -1,18 +1,13 @@
-.btn {
-  @apply text-sm font-thin antialiased text-white px-4 py-3 no-underline rounded mx-1 bg-blue-300;
+.btn
+  @apply text-sm font-thin antialiased text-white px-4 py-3 no-underline rounded mx-1 bg-blue-300
 
   &:hover,
-  &:focus {
+  &:focus
     @apply bg-blue-400
-  }
-}
 
-.btn.is-secondary {
-  @apply bg-gray-500;
+.btn.is-secondary
+  @apply bg-gray-500
 
   &:hover,
-  &:focus {
+  &:focus
     @apply bg-gray-600
-  }
-}
-
