--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -1,9 +1,7 @@
-@import 'tailwindcss/base';
+@import 'tailwindcss/base'
+@import 'custom-base'
 
-@import 'custom-base';
+@import 'tailwindcss/components'
+@import 'custom-components'
 
-@import 'tailwindcss/components';
-
-@import 'custom-components';
-
-@import 'tailwindcss/utilities';
+@import 'tailwindcss/utilities'
