--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -1,7 +1,7 @@
 @import 'tailwindcss/base'
-@import 'custom-base'
+@import './base.css'
 
 @import 'tailwindcss/components'
-@import 'custom-components'
+@import './components.css'
 
 @import 'tailwindcss/utilities'
